# YetAnotherCalendar

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yaml  docker-compose.yaml  package-lock.json
.github/workflows/: build-and-deploy.yaml  build.yaml  deploy.yaml  lint-and-test.yaml  lint.yaml  test.yaml
backend/: .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev.py  docker-compose.dev.yml  docker-compose.yml  generate_password_hash.py  manage.py  modeus.py  netology.py  prod.py  pyproject.toml  requirements.txt  setup.cfg
backend/.claude/: settings.local.json
backend/api/: modeus.py
backend/app/: auth.py  binders.py  main.py  services.py  settings.py  templating.py
backend/app/controllers/: examples.py  home.py  models.py  modeus.py  netology.py
backend/app/docs/: __init__.py  binders.py
backend/blacksheep/app/: auth.py  binders.py  errors.py  main.py  settings.py  templating.py
backend/blacksheep/app/controllers/: models.py  modeus.py  netology.py
backend/blacksheep/app/docs/: __init__.py  binders.py
backend/blacksheep/domain/: common.py
backend/calendarsite/: asgi.py  settings.py  urls.py  wsgi.py
backend/domain/: common.py
backend/integration/: exceptions.py  modeus.py  netology.py
backend/tests/: netology.py
backend/yet_another_calendar/: __init__.py  __main__.py  log.py  settings.py
backend/yet_another_calendar/integration/: exceptions.py  modeus.py
backend/yet_another_calendar/services/: __init__.py
backend/yet_another_calendar/services/redis/: lifespan.py
backend/yet_another_calendar/static/docs/: redoc.standalone.js  swagger-ui-bundle.js  swagger-ui.css
backend/yet_another_calendar/tests/: conftest.py  handlers.py  modeus.py  monitoring.py  mts.py  netology.py  test_application.py  test_auth.py  test_bulk.py  test_lms.py  test_modeus.py  test_monitoring.py  test_mts.py  test_netology.py  test_rate_limiting.py  test_utmn.py
backend/yet_another_calendar/tests/fixtures/: app_config.json  auth_form_error_tag.html  auth_form_none.html  auth_form_ok.html  bulk_fixture.json  course_response_schema.json  courses_schema_lms.json  extended_courses_schema_lms.json  extended_lessons.json  filter_lessons.json  full_events.json  people_search_empty.json  people_search_ok.json  profession.json  program_45526.json  program_57604.json  utmn_empty_page.html  utmn_teachers_page_1.html  utmn_teachers_page_2.html  wrong_app_config.json
backend/yet_another_calendar/tests/fixtures/lms/: extended_lesson.json  lms_course_info.json  lms_user_info.json
backend/yet_another_calendar/web/: __init__.py  application.py  cache_builder.py  lifespan.py
backend/yet_another_calendar/web/api/: __init__.py  router.py  validators.py
backend/yet_another_calendar/web/api/auth/: __init__.py  rate_limiter.py  schema.py  utils.py  views.py
backend/yet_another_calendar/web/api/bulk/: __init__.py  integration.py  schema.py  views.py
backend/yet_another_calendar/web/api/docs/: __init__.py  views.py
backend/yet_another_calendar/web/api/echo/: __init__.py  views.py
backend/yet_another_calendar/web/api/lms/: __init__.py  integration.py  schema.py  views.py
backend/yet_another_calendar/web/api/modeus/: integration.py  schema.py  views.py
backend/yet_another_calendar/web/api/monitoring/: __init__.py  views.py
backend/yet_another_calendar/web/api/mts/: __init__.py  integration.py  schema.py  views.py
backend/yet_another_calendar/web/api/netology/: __init__.py  integration.py  schema.py  views.py
backend/yet_another_calendar/web/api/redis/: __init__.py  views.py
backend/yet_another_calendar/web/api/utmn/: __init__.py  integration.py  schema.py
docs/: concept.md  project-stages.md  team.md
frontend/: .env.dist  Dockerfile  README.md  index.js  nginx-dev.conf  nginx.conf  package-lock.json  package.json
frontend/components/: Calendar.jsx
frontend/components/Header/: Header.js
frontend/public/: index.html
frontend/src/: App.js  App.jsx  App.scss  index.css  index.js  index.scss  variables.js
frontend/src/components/: DataPicker.jsx  FeaturesModal.jsx  FeedbackModal.jsx  GitHubStarModal.jsx  PasswordPrivacyModal.jsx
frontend/src/components/Calendar/: CacheUpdateBtn.jsx  Calendar.jsx  DataPicker.jsx  DaysNumber.jsx  DeadLine.jsx  EventModal.jsx  EventsDetail.jsx  ExitBtn.jsx  ICSExporter.jsx  LessonTimes.jsx  MobileBurgerMenu.jsx  MobileCalendarView.jsx  PrivateRoute.jsx  SimpleDatePicker.jsx
frontend/src/components/Header/: Header.js
frontend/src/components/Login/: ModeusLoginForm.jsx
frontend/src/components/login/: TutorLogin.jsx  login.jsx
frontend/src/context/: AuthContext.js
frontend/src/elements/: ErrorMessage.jsx  InlineLoader.jsx  Loader.jsx  PrivateRoute.jsx  TutorPrivateRoute.jsx
frontend/src/pages/: AboutPage.jsx  CalendarPage.jsx  CalendarRoute.jsx  FeedbackPage.jsx  LoginPage.jsx  LoginRoute.jsx  ModeusDaySchedulePage.jsx  NotFoundPage.jsx  TutorLoginPage.jsx
frontend/src/routes/: CalendarRoute.jsx
frontend/src/services/: api.js
frontend/src/services/api/: login.js
frontend/src/style/: DatePicker.scss  SimpleDatePicker.scss  about.scss  calendar.scss  feedback-modal.scss  feedback.scss  header.scss  login.scss  modeus.scss  notfound.scss  password-privacy-modal.scss  tutor-login.scss
frontend/src/utils/: auth.js  auth.jsx  dateUtils.js  debug.js  errorHandler.js  localStorageBackup.js
