[project]
name = "yet_another_calendar"
version = "2.0.0"
description = ""
authors = [
    { name = "Ivan Popov", email = "ma1n.py@yandex.ru" },
    { name = "Azamat Komaev", email = "azamatkomaev15@gmail.com" }
]
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "beautifulsoup4>=4.13.3",
    "debugpy>=1.8.16",
    "environs>=14.1.1",
    "fastapi>=0.115.11",
    "fastapi-cache2>=0.2.2",
    "flake8-import-conventions>=0.1.0",
    "httpx[http2]==0.27.2",
    "icalendar>=6.1.1",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pytz>=2025.1",
    "redis>=5.2.1",
    "reretry>=0.11.8",
    "rollbar>=1.3.0",
    "types-pytz>=2025.1.0.20250204",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
    "yarl>=1.18.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fakeredis>=2.27.0",
    "flake8-async>=25.7.1",
    "mypy>=1.18.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
    "ruff>=0.9.10",
    "types-icalendar>=6.1.0.20250301",
]

[tool.mypy]
strict = true
explicit_package_bases = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false
warn_no_return = false
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "YET_ANOTHER_CALENDAR_ENVIRONMENT=pytest",
    "YET_ANOTHER_CALENDAR_DB_BASE=yet_another_calendar_test",
]

[tool.ruff]
target-version = "py311"

lint.select = [
    "A", # prevent using keywords that clobber python builtins
    "N", # pep8-naming
    "B", # bugbear: security warnings
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "ISC", # implicit string concatenation
    "UP", # alert you when better syntax is available in your python version
    "RUF", # the ruff developer's own rules

    "T20", # flake8-print
    "T10", # flake8-debugger
    "LOG", # flake8-logging
    "COM", # flake8-logging
    "ASYNC", # flake8-async
    "ANN", # flake8-annotations
    "C4", # flake8-comprehensions
    "EXE", # flake8-executable
    "FIX", # flake8-fixme
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie

    "PL", # Pylint
    "PLE", # pylint errors

]
lint.ignore = [
    "ANN401",
    "B008", # Depends
    "PLR0913", # Depends
    "ASYNC109", # Async function definition with a `timeout` parameter
]
line-length = 119
exclude = [
    ".venv/",
    "*/tests/*",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]

[fastapi-template.options]
project_name = "yet_another_calendar"
api_type = "rest"
enable_redis = "True"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "None"
enable_taskiq = "None"
enable_kube = "True"
kube_name = "yet-another-calendar"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "True"
traefik_labels = "None"
add_dummy = "None"
orm = "none"
self_hosted_swagger = "True"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "None"
gunicorn = "None"
add_users = "None"
cookie_auth = "None"
jwt_auth = "None"


# https://docs.astral.sh/uv/concepts/projects/#build-systems
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yet_another_calendar"]
